# dependency_template

./: Build_and_Deploy.docx  LICENSE  README.md  log_config.yaml  pyproject.toml
src/dependency_template/: DependencyTemplate.py  DependencyTemplateAutomationJob.py  DependencyTemplateCLI.py  DependencyTemplateQueryUtil.py  ShipDictStructure.txt  __init__.py
src/dependency_template.egg-info/: PKG-INFO  top_level.txt
src/dependency_template/communication/: test_email_list.xlsx
src/hal_positive_surprise.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
